Adding more css

--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -3,4 +3,12 @@ body {
     padding: 0px;
     background-color:white;
 }
-
+.dashboard {
+    width: 80%;
+    margin: auto;
+    background-color: tan;
+    border: 1px solid black;
+    box-shadow: 0px 0px 5px blanchedalmond;
+    height: 100%;
+    margin-top: 20px;
+}
