--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -23,3 +23,20 @@ img{
     width:20%;
     border: 2px dotted floralwhite;
 }
+h1 {
+    text-align: center;
+   margin-top: 2px;
+   font-family: sans-serif;
+   color: blue;
+   
+   }
+p {
+     border-top: 1px solid black;
+     font-family: sans-serif;
+     color: black;
+     
+    
+   }
+   form {
+    display: flex;
+   }
