--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -39,6 +39,7 @@ p {
    }
    form {
     display: flex;
+    float: cl
    }
    footer{
     border-top: 0px solid black;
@@ -52,4 +53,5 @@ p {
     color:white;
     background-color: blue;
     padding: 10px;
+    position: relative;
 }
