--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -39,7 +39,7 @@ p {
    }
    form {
     display: flex;
-    float: cl
+    flex-direction: column;
    }
    footer{
     border-top: 0px solid black;
@@ -53,5 +53,4 @@ p {
     color:white;
     background-color: blue;
     padding: 10px;
-    position: relative;
 }
