--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -15,8 +15,8 @@ body {
 .images{
     display: flex;
     margin:auto;
-    width:110%;
-    justify-content: space-between;
+    width:80%;
+    justify-content: space-around;
 }
 img{
     display: flex;
@@ -35,12 +35,7 @@ p {
      font-family: sans-serif;
      color: black;
      
-    
-   }
-   form {
-    display: flex;
-    flex-direction: column;
-   }
+       }
    footer{
     border-top: 0px solid black;
     text-align: center;
@@ -53,4 +48,7 @@ p {
     color:white;
     background-color: blue;
     padding: 10px;
+}
+#input {
+    display: flex;
 }
