--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -1,51 +1,113 @@
-body {
+body{
     margin: 0px;
     padding: 0px;
-    background-color: lightcyan;
+    color: white;
+    background-color: darkcyan;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    box-sizing: border-box;   
 }
-.dashboard {
-    width: 80%;
-    margin: auto;
-    background-color: tan;
-    border: 1px solid black;
-    box-shadow: 0px 0px 5px blanchedalmond;
-    height: 100%;
-    margin-top: 20px;
-}
-.images{
+#title{
     display: flex;
-    margin:auto;
-    width:80%;
+    justify-content: center;
+    align-items: center;
+    box-shadow:0px 0px 10px darkblue;
+    background-color: lightskyblue;
+    color: darkblue;
+    height: 60px;
+    margin-top: 0px;    
+}
+.Output
+{
+    width: 90%;
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+      
+}
+.productionData {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin-right: 20px;
+    box-shadow: 0px 0px 10px lightskyblue;
+    border-radius: 4px;
+    font-size: 16px;     
+}
+
+.formData   #sheds{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 20px;
+    
+}
+
+.formData > form{
+    width: 100%;
+    padding: 20px;
+    
+}
+
+form > div > input[type="number"]{
+    height: 30px;
+     
+}
+.images {
     justify-content: space-around;
 }
-img{
-    display: flex;
-    width:20%;
-    border: 2px dotted floralwhite;
+/* Button */
+form > button {
+    
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    width: 100%;
+    
 }
-h1 {
+
+form > button[type = "submit"]{
+    margin-top: 20px;
+}
+form > button[type = "submit"], form > button[type = "reset"]{
+    background: none;
+    color: white;
+    border: 1px solid white;
+} 
+.display{
+    overflow: auto;
+    width: 50%;
+    box-shadow:0px 0px 10px darkcyan;
+    background-color: darkcyan;
+    border-radius: 4px;
+    font-size: 16px;
+    height: 550px;
+    
+}
+
+#displayTitle{
     text-align: center;
-   margin-top: 2px;
-   font-family: sans-serif;
-   color: darkblue;
-   
-   }
-p {
-     border-top: 1px solid black;
-     font-family: sans-serif;
-     color: black;
 }
-    #bio {
-        align-items: center;
+
+#outputData{
+    padding: 0px 20px;
+}
+
+@media screen and (max-width: 760px) {
+    .milkProduce{
+        display: flex;
+        flex-direction: row;  
+    }
+
+    .formData {
+        width: 100%;
+        margin-bottom: 20px; 
+    }
+
+    .outputDisplay{
+        width: 100%;
+       
     }
     
-.btn{
-    color:white;
-    background-color: blue ;
-    padding: 10px;
-    display: flex;
-    flex-direction: left;
-}
-#input {
-    display: flex;
 }
