--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     box-shadow:0px 0px 10px darkblue;
-    background-color: lightskyblue;
+    background-color: whitesmoke;
     color: darkblue;
     height: 60px;
     margin-top: 0px;    
@@ -82,8 +82,7 @@ form > button[type = "submit"], form > button[type = "reset"]{
     background-color: darkcyan;
     border-radius: 4px;
     font-size: 16px;
-    height: 550px;
-    
+    height: 550px;    
 }
 
 #displayTitle{
