--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -25,7 +25,7 @@ body{
     justify-content: center;
       
 }
-.productionData {
+.production {
     display: flex;
     justify-content: center;
     align-items: center;
